--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "firebase-admin": "^10.0.0",
+    "i": "^0.3.7",
+    "npm": "^8.1.3",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
