--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "firebase": "^9.4.1",
     "firebase-admin": "^10.0.0",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
