--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "bootstrap": "^5.1.3",
+    "firebase": "^9.4.1",
     "firebase-admin": "^10.0.0",
     "i": "^0.3.7",
+    "install": "^0.13.0",
     "npm": "^8.1.3",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.2",
     "socket.io-client": "^3.1.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
